cmake_minimum_required(VERSION 2.8)
project(hackerrank_dsa)

add_executable(sorting_runningMedian sorting_runningMedian.cpp)
add_executable(sorting_mergeSortCountingInversions sorting_mergeSortCountingInversions.cpp)
add_executable(stringManip_anagramDel stringManip_anagramDeletion.cpp)
add_executable(stringManip_alternateChar stringManip_alternatingCharacters.cpp) 

add_executable(maxNumOfKSumPairs maxNumOfKSumPairs.cpp) 
add_executable(validParanthesis validParanthesis.cpp)
add_executable(getMaxInGenArray 1646_getMaxInGenArray.cpp)

add_executable(xorOp 1486_xorOp.cpp)
add_executable(avgSalary 1491_avgSalary.cpp)
add_executable(numBottles 1518_numBottles.cpp)
add_executable(alienDictionary 953_alienDictionary.cpp)
add_executable(validPerfectSqr 367_validPerfectSqr.cpp)
add_executable(zigzagConversion 6_zigzagConversion.cpp)

add_executable(141_linkedListCycle 141_linkedListCycle.cpp)
add_executable(155_minStack 155_minStack.cpp)
add_executable(169_majorityElement 169_majorityElement.cpp)
add_executable(202_happyNum 202_happyNum.cpp)
add_executable(204_count_primes 204_count_primes.cpp)

add_executable(242_validAnagrams 242_validAnagrams.cpp)
add_executable(371_sumWithoutPlus 371_sumWithoutPlus.cpp)
add_executable(88_mergeSortedArray 88_mergeSortedArray.cpp)
add_executable(108_sortedArrayToBinarySearchTree 108_sortedArrayToBinarySearchTree.cpp)
add_executable(189_rotateArray 189_rotateArray.cpp)


