cmake_minimum_required(VERSION 2.8)
project(hackerrank_dsa)

add_executable(sorting_runningMedian sorting_runningMedian.cpp)
add_executable(sorting_mergeSortCountingInversions sorting_mergeSortCountingInversions.cpp)
add_executable(stringManip_anagramDel stringManip_anagramDeletion.cpp)
add_executable(stringManip_alternateChar stringManip_alternatingCharacters.cpp) 

add_executable(maxNumOfKSumPairs maxNumOfKSumPairs.cpp) 
add_executable(validParanthesis validParanthesis.cpp)
add_executable(getMaxInGenArray 1646_getMaxInGenArray.cpp)

add_executable(xorOp 1486_xorOp.cpp)
add_executable(avgSalary 1491_avgSalary.cpp)
add_executable(numBottles 1518_numBottles.cpp)
add_executable(alienDictionary 953_alienDictionary.cpp)
add_executable(validPerfectSqr 367_validPerfectSqr.cpp)
add_executable(zigzagConversion 6_zigzagConversion.cpp)

add_executable(141_linkedListCycle 141_linkedListCycle.cpp)
add_executable(155_minStack 155_minStack.cpp)
add_executable(169_majorityElement 169_majorityElement.cpp)
add_executable(202_happyNum 202_happyNum.cpp)
add_executable(204_count_primes 204_count_primes.cpp)

add_executable(242_validAnagrams 242_validAnagrams.cpp)
add_executable(371_sumWithoutPlus 371_sumWithoutPlus.cpp)
add_executable(88_mergeSortedArray 88_mergeSortedArray.cpp)
add_executable(108_sortedArrayToBinarySearchTree 108_sortedArrayToBinarySearchTree.cpp)
add_executable(189_rotateArray 189_rotateArray.cpp)

add_executable(205_isomorphicStrings 205_isomorphicStrings.cpp)
add_executable(226_invertBinaryTree 226_invertBinaryTree.cpp)
add_executable(226_invertBinaryTreeIterativeSol 226_invertBinaryTreeIterativeSol.cpp)
add_executable(448_findDisappearedNums 448_findDisappearedNums.cpp)
add_executable(572_subtreeOfAnotherTree 572_subtreeOfAnotherTree.cpp)
add_executable(572_subtreeOfAnotherTreeElegantSol 572_subtreeOfAnotherTreeElegantSol.cpp)
add_executable(556_reverseWordsInAString 556_reverseWordsInAString.cpp)

add_executable(589_NaryTreePreorderTraversal 589_NaryTreePreorderTraversal.cpp)
add_executable(617_mergeTwoBinaryTrees 617_mergeTwoBinaryTrees.cpp)
add_executable(665_nonDecreasingArray 665_nonDecreasingArray.cpp)

add_executable(669_trimBinaryTree 669_trimBinaryTree.cpp)
add_executable(674_longestContIncSubseq 674_longestContIncSubseq.cpp)
add_executable(703_kthLargestElement 703_kthLargestElement.cpp)
add_executable(705_designHashSet 705_designHashSet.cpp)
add_executable(852_peakIndexMountainArray 852_peakIndexMountainArray.cpp)
add_executable(91160_findWords 91160_findWords.cpp)

add_executable(5_longestPalindromicSubstr 5_longestPalindromicSubstr.cpp)
add_executable(11_containerWithMostWater 11_containerWithMostWater.cpp)
add_executable(17_letterCombinationPhonenum 17_letterCombinationPhonenum.cpp)
add_executable(22_generateParanthesis 22_generateParanthesis.cpp)

add_executable(34_findFirstAndLastPositionInSortedArray 34_findFirstAndLastPositionInSortedArray.cpp)
add_executable(46_permutations 46_permutations.cpp)

add_executable(150_evaluateReversePolishNums 150_evaluateReversePolishNums.cpp)
add_executable(207_courseSchedule 207_courseSchedule.cpp)

add_executable(test test.cpp)
add_executable(tusimple_q tusimple_q.cpp)




